--- a/src/components/plot.scss
+++ b/src/components/plot.scss
@@ -1,6 +1,7 @@
 .table {
     display: table;
     width: 100%;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .row {
@@ -11,7 +12,6 @@
 .name {
     width: 150px;
     font-size: 12px;
-    font-family: Arial, Helvetica, sans-serif;
     display: table-cell;
     padding: 5px;
     text-align: right;
@@ -21,15 +21,43 @@
     display: table-cell;
     padding: 5px;
     vertical-align: middle;
+    background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAABGdBTUEAALGPC/xhBQAAAA1JREFUCB1juHv37n8ACMkDl+5ruHAAAAAASUVORK5CYII=')
+        50% 0 repeat-y;
+}
+
+.guide {
+    text-align: center;
+    background: none;
+    color: #999;
 }
 
 .bar {
-    background: rgba(0, 0, 0, 0.1);
     width: 100%;
     height: 10px;
 }
 
 .bar-value {
-    background: red;
+    background: #666;
     height: 10px;
+}
+
+.toolbar {
+    width: 100%;
+    border-bottom: 1px solid #333;
+    margin-bottom: 20px;
+
+    button {
+        border: none;
+        background: none;
+        color: #333;
+        cursor: pointer;
+        text-transform: uppercase;
+        font-size: 16px;
+        padding: 8px 12px;
+
+        &.active-button {
+            background: #333;
+            color: white;
+        }
+    }
 }
