--- a/src/components/marker.scss
+++ b/src/components/marker.scss
@@ -7,8 +7,9 @@
 .detail {
     max-width: 60vw;
     margin: auto;
-    padding: 10px 20px;
+    padding: 25px 15px 5px 15px;
     background: rgba(0, 0, 0, 0.3);
     color: white;
     border-radius: 2px;
+    font-size: 16px;
 }
