--- a/src/components/marker.scss
+++ b/src/components/marker.scss
@@ -5,11 +5,13 @@
 }
 
 .detail {
-    max-width: 60vw;
+    max-width: 70vw;
     margin: auto;
-    padding: 25px 15px 5px 15px;
-    background: rgba(0, 0, 0, 0.3);
-    color: white;
-    border-radius: 2px;
-    font-size: 16px;
+    padding: 30px;
+    background: rgba(0, 0, 0, 0.5);
+    p {
+        font-size: 22px;
+        margin: 0;
+        padding: 0;
+    }
 }
