--- a/src/components/background.scss
+++ b/src/components/background.scss
@@ -1,6 +1,6 @@
 .wrapper {
     width: 100vw;
-    height: 100%;
+    height: 100vh;
     background: #333;
     transition: all 0.5s ease;
 }
@@ -66,6 +66,10 @@
 }
 
 @media only screen and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) {
+    .wrapper {
+        height: 100%;
+    }
+
     .legend {
         border-radius: 0;
         bottom: 0;
