Slight tweak for mobile bar positioning

--- a/src/components/plot.scss
+++ b/src/components/plot.scss
@@ -75,3 +75,9 @@
         }
     }
 }
+
+@media only screen and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) {
+    .bar {
+        margin-top: -10px;
+    }
+}
