Electorates with spaces in their names are now handled

--- a/src/components/background.scss
+++ b/src/components/background.scss
@@ -46,7 +46,7 @@
     height: 10px;
     width: 100%;
     margin-bottom: 5px;
-    background: linear-gradient(90deg, #91b6c9, #fafcfd 50%, #8d0098);
+    background: linear-gradient(90deg, #025e89, #ffffff 50%, #b0064d);
 }
 
 .legend-labels {
