Map is now clickable

--- a/src/components/plot.scss
+++ b/src/components/plot.scss
@@ -19,7 +19,7 @@
 
 .support {
     display: table-cell;
-    padding: 5px;
+    padding: 2px 5px 5px 5px;
     vertical-align: middle;
     background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAABGdBTUEAALGPC/xhBQAAAA1JREFUCB1juHv37n8ACMkDl+5ruHAAAAAASUVORK5CYII=')
         50% 0 repeat-y;
