--- a/src/components/scrolly.scss
+++ b/src/components/scrolly.scss
@@ -8,9 +8,9 @@
 }
 
 .first-marker {
-    padding-top: 100vh;
+    padding-top: 100vh !important;
 }
 
 .last-marker {
-    padding-bottom: 100vh;
+    padding-bottom: 100vh !important;
 }
