Changed the colours of the scale

--- a/src/components/background.scss
+++ b/src/components/background.scss
@@ -46,7 +46,7 @@
     height: 10px;
     width: 100%;
     margin-bottom: 5px;
-    background: linear-gradient(90deg, #025e89, #ffffff 50%, #b0064d);
+    background: linear-gradient(90deg, #e86b2b, #ffffff 50%, #00a3cf);
 }
 
 .legend-labels {
