Changed background colour

--- a/src/components/background.scss
+++ b/src/components/background.scss
@@ -1,7 +1,7 @@
 .wrapper {
     width: 100vw;
     height: 100vh;
-    background: #333;
+    background: #2e3638;
     transition: all 0.5s ease;
 }
 
