Flipped the colours of the map

--- a/src/components/background.scss
+++ b/src/components/background.scss
@@ -46,7 +46,7 @@
     height: 10px;
     width: 100%;
     margin-bottom: 5px;
-    background: linear-gradient(90deg, #e86b2b, #ffffff 50%, #00a3cf);
+    background: linear-gradient(90deg, #00a3cf, #ffffff 50%, #e86b2b);
 }
 
 .legend-labels {
