Fixed mobile legend background colour

--- a/src/components/background.scss
+++ b/src/components/background.scss
@@ -73,7 +73,7 @@
     .legend {
         border-radius: 0;
         bottom: 0;
-        background: #333;
+        background: #2e3638;
         padding: 10px;
     }
 
