--- a/src/components/background.scss
+++ b/src/components/background.scss
@@ -2,7 +2,6 @@
     width: 100vw;
     height: 100vh;
     background: #2e3638;
-    transition: all 0.5s ease;
 }
 
 .before {
@@ -20,6 +19,7 @@
 .after {
     position: absolute;
     bottom: 0;
+    height: 100vh !important;
 }
 
 .legend {
